tests/ui/let-else/let-else-check.stderr
error: unused variable: `x`
  --> $DIR/let-else-check.rs:12:13
   |
LL |         let x = 1;
   |             ^
   |
note: the lint level is defined here
  --> $DIR/let-else-check.rs:1:9
   |
LL | #![deny(unused_variables)]
   |         ^^^^^^^^^^^^^^^^
help: if this is intentional, prefix it with an underscore
   |
LL |         let _x = 1;
   |             ~~

error: unused variable: `x`
  --> $DIR/let-else-check.rs:16:9
   |
LL |     let x = 1;
   |         ^
   |
help: if this is intentional, prefix it with an underscore
   |
LL |     let _x = 1;
   |         ~~

error: aborting due to 2 previous errors

